# ClickHouse

./: .gitignore  .gitmodules  ALTINITY_CONTRIBUTIONS.md  Antalya.md  CHANGELOG.md  CMakeLists.txt  PreLoad.cmake  README.md  SECURITY.md  uuid
.claude/: CLAUDE.md  learnings.md
.claude/docs/: coverage_investigation.md  relevant_test_quality.md  relevant_tests.md
.claude/tools/: fetch_ci_report.js  fetch_perf_report.py
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  create_combined_ci_report.py  create_workflow_report.py
.github/ISSUE_TEMPLATE/: 10_question.md  15_bug-report.md  20_feature-request.md
.github/grype/: parse_vulnerabilities_grype.py  run_grype_scan.sh  transform_and_upload_reports_s3.sh  transform_and_upload_results_s3.sh
.github/workflows/: README.md  backfill_distroless.yml  backport_branches.yml  cancel.yml  check_default_authors.yml  ci_tests.yml  create_release.yml  custom_build_praktika.yml  docker_publish.yml  docker_test_images.yml  grype_scan.yml  hourly.yml  main.yml  master.yml  merge_queue.yml  nightly.yml  nightly_coverage.yml  nightly_fuzzers.yml  nightly_jepsen.yml  nightly_keeper.yml  nightly_keeper_faults.yml  nightly_statistics.yml  nightly_test_enabling.yml  optimize_toolchain.yml  pull_request.yml  regression.yml  release.yml  release_branches.yml  repo-sanity-checks.yml  retry_infra_failures.yml  reusable_build.yml  reusable_docker.yml  reusable_sign.yml  reusable_test.yml  scheduled_runs.yml  sign_and_release.yml  vectorsearchstress.yml
base/base/: DecomposedFloat.h  coverage.cpp  coverage.h  getFQDNOrHostName.cpp  itoa.cpp  memcmpSmall.h  openpty.cpp  openpty.h  wide_integer_impl.h
ci/defs/: darwin.skip  defs.py  job_configs.py
ci/infra/: cloud.py
ci/jobs/: ast_fuzzer_job.py  build_clickhouse.py  buzzhouse_job.py  ci_tests_job.py  collect_statistics.py  copilot_review_job.py  docker_server.py  docker_server_job.py  docs_job.py  fast_test.py  functional_stateless_tests.py  functional_tests.py  install_check.py  integration_test_job.py  libfuzzer_test_check.py  llvm_coverage_job.py  performance_tests.py  sqlancer_job.sh  sqllogic_test.py  stress_job.py  unit_tests_job.py  vector_search_stress_tests.py
ci/praktika/: __main__.py  _environment.py  cidb.py  event.py  gh.py  gh_auth.py  hook_cache.py  hook_html.py  html_prepare.py  info.py  issue.py  job.py  json.html  native_jobs.py  parser.py  result.py  runner.py  secret.py  service.py  settings.py  yaml_generator.py
ci/settings/: settings.py
ci/tests/: test_cleanup_test_groups.py  test_normalize_symbol.py  test_print_stacktraces.py  test_stress_job.py  test_workflow_input_parsing.py
ci/workflows/: backport_branches.py  ci_tests.py  defs.py  master.py  nightly_coverage.py  nightly_test_enabling.py  pull_request.py
cmake/: autogenerated_versions.txt  build_clang_builtin.cmake  compiler_rt_link.cmake  cpu_features.cmake  localize_rust_c_symbols.sh  sanitize.cmake
cmake/freebsd/: default_libs.cmake
cmake/linux/: default_libs.cmake  toolchain-aarch64.cmake  toolchain-e2k.cmake  toolchain-loongarch64.cmake  toolchain-ppc64le.cmake  toolchain-riscv64.cmake  toolchain-s390x.cmake  toolchain-x86_64-musl.cmake  toolchain-x86_64.cmake
cmake/sunos/: default_libs.cmake
contrib/: CMakeLists.txt  update-submodules.sh
contrib/aws-cmake/: CMakeLists.txt
contrib/compiler-rt-cmake/: CMakeLists.txt
contrib/corrosion-cmake/: CMakeLists.txt
contrib/curl-cmake/: CMakeLists.txt
contrib/fastops-cmake/: CMakeLists.txt
contrib/google-protobuf-cmake/: CMakeLists.txt
contrib/grpc-cmake/: CMakeLists.txt
contrib/isa-l-cmake/: CMakeLists.txt
contrib/jwt-cpp-cmake/: CMakeLists.txt
contrib/libllvmlibc-cmake/: CMakeLists.txt
contrib/libstemmer-c-cmake/: CMakeLists.txt  FORK_UPDATE_INSTRUCTIONS.md  README.md
contrib/llvm-project-cmake-new/: CMakeLists.txt
coordination/: state
data/system/: asynchronous_metric_log  (+11 more)
docker/: images.json
metadata/: default  default.sql  system  system.sql
metadata_dropped/: default.test.d0dd488c-cf79-47b6-be51-9ea08334aef2.sql
programs/: main.cpp
src/: CMakeLists.txt
src/Functions/array/: CMakeLists.txt  array.cpp  arrayAUC.cpp  arrayAutocorrelation.cpp  arrayDotProduct.cpp  arrayEnumerateRanked.h  arrayFilter.h  arrayIntersect.cpp  arrayNorm.cpp  arrayReduce.cpp  arrayReduceInRanges.cpp  arrayRemove.cpp  arrayTranspose.cpp
tests/: broken_tests.json  clickhouse-test  clickhouse-test-process-management.md  parallel_replicas_blacklist.txt  ubsan_ignorelist.txt
tmp/: build_log.txt  clickhouse-server.err.log.zst  coverage_investigation.md
utils/: generate-system-tables-docs
(+8554 files in other folders)
